syntax = "proto3";

package agi.middleware.subscription.v1;

option go_package = "github.com/NpoolPlatform/message/agi/middleware/v1/subscription";

import "basetypes/agi/v1/enums.proto";
import "basetypes/v1/conds.proto";

message SubscriptionReq {
    optional uint32 ID = 10;
    optional string EntID = 20;
    optional string AppID = 30;
    optional string UserID = 40;
    optional string AppGoodID = 50;
    optional uint32 NextExtendAt = 60;
    optional uint32 PermanentQuota = 70;
}

message Subscription {
    // @inject_tag: sql:"id"
    uint32 ID = 10;
    // @inject_tag: sql:"ent_id"
    string EntID = 20;
    // @inject_tag: sql:"app_id"
    string AppID = 30;
    // @inject_tag: sql:"user_id"
    string UserID = 40;
    // @inject_tag: sql:"app_good_id"
    string AppGoodID = 50;
    // @inject_tag: sql:"next_extend_at"
    uint32 NextExtendAt = 60;
    // @inject_tag: sql:"permanent_quota"
    uint32 PermanentQuota = 70;
    // @inject_tag: sql:"created_at"
    uint32 CreatedAt = 1000;
    // @inject_tag: sql:"updated_at"
    uint32 UpdatedAt = 2000;
}

message Conds {
    optional basetypes.v1.Uint32Val ID = 10;
    optional basetypes.v1.Uint32SliceVal IDs = 20;
    optional basetypes.v1.StringVal EntID = 30;
    optional basetypes.v1.StringSliceVal EntIDs = 40;
    optional basetypes.v1.StringVal AppGoodID = 50;
    optional basetypes.v1.StringSliceVal AppGoodIDs = 60;
    optional basetypes.v1.StringVal AppID = 70;
    optional basetypes.v1.StringSliceVal AppIDs = 80;
    optional basetypes.v1.StringVal UserID = 90;
    optional basetypes.v1.StringSliceVal UserIDs = 100;
}

